--- a/index.html
+++ b/index.html
@@ -1,17 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Required Meta tags -->
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Rupdeep Saha | Portfolio</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	
-	<!-- Title of the Page -->
-	<title>Portfolio</title>
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="./css/bootstrap.min.css">
+
+	<!-- Font Awesome icons -->
+	<link rel="stylesheet" href="./css/all.min.css">
+
+	<!-- My own stylesheet -->
+	<link rel="stylesheet" href="./css/style.css">
+
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-	<h1>Hello World!</h1>
+	<!-- ===== Start Header Area ===== -->
+	<header class="header-area">
+		<div class="main-menu">
+			<!-- === Bootstrap Navbar === -->
+			<nav class="navbar navbar-expand-lg navbar-light">
+				<a class="navbar-brand" href="#">Rupdeep Saha</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <div class="mr-auto"></div>
+				  <ul class="navbar-nav">
+					<li class="nav-item active">
+					  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link" href="#">Services</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Portfolio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Pages</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Blog</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+				  </ul>
+				</div>
+			</nav>
+		</div>
+	</header>
+	<!-- ===== End Header Area ===== -->
+
+	<!-- JQuery JS -->
+	<script src="./js/jquery-3.5.1.min.js"></script>
+
+	<!-- Bootstrap JS -->
+	<script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
