--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-	<!-- ===== Start Header Area ===== -->
+	<!-- ===== Header Area ===== -->
 	<header class="header-area">
 		<div class="main-menu">
 			<!-- === Bootstrap Navbar === -->
@@ -57,7 +57,31 @@
 			</nav>
 		</div>
 	</header>
-	<!-- ===== End Header Area ===== -->
+
+	<!-- ===== Main Area ===== -->
+	<main class="site-main">
+		<!-- ===== Banner Area ===== -->
+		<section class="site-banner">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6 col-md-12 site-title">
+						<h3 class="title-text">Hey</h3>
+						<h1 class="title-text text-uppercase">I am Rupdeep</h1>
+						<h4 class="title-text text-uppercase">Senior Wordpress Developer</h4>
+						<div class="site-buttons">
+							<div class="d-flex flex-row flex-wrap">
+								<button type="button" class="btn button primary-button mr-4 text-uppercase">Hire Me</button>
+								<button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-12 banner-image">
+						<img src="./assets/images/banner/banner-image.png" alt="banner-img" class="img-fluid">
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 
 	<!-- JQuery JS -->
 	<script src="./js/jquery-3.5.1.min.js"></script>
