--- a/index1.html
+++ b/index1.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<div class="bg-img">
-		<!-- ===== Header Area ===== -->
+		<!-- ===== Start Header Area ===== -->
 		<header class="header-area">
 			<div class="main-menu">
 				<!-- === Bootstrap Navbar === -->
@@ -58,32 +58,28 @@
 				  </nav>
 			</div>
 		</header>
+		<!-- ===== End Header Area ===== -->
 
-		<!-- ===== Main Area ===== -->
+		<!-- ===== Start Main Area ===== -->
 		<main class="site-main">
-			<!-- ===== Banner Area ===== -->
-			<!-- <section class="site-banner">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6 col-md-12 site-title">
-							<h3 class="title-text">Hey</h3>
-							<h1 class="title-text text-uppercase">I am Rupdeep</h1>
-							<h4 class="title-text text-uppercase">Senior Wordpress Developer</h4>
-							<div class="site-buttons">
-								<div class="d-flex flex-row flex-wrap">
-									<button type="button" class="btn button primary-button mr-4 text-uppercase">Hire Me</button>
-									<button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
-								</div>
+			<div class="row m-0">
+				<div class="col-md-12">
+					<!-- ===== Start Banner Area ===== -->
+					<section class="site-banner" id="home">
+						<div class="banner-area">
+							<div class="author text-center">
+								<div class="author-img"></div>
+								<h1 class="font-staat text-uppercase py-3">Rupdeep Saha</h1>
+								<h5 class="text-white font-ram font-size-27">I'm <span id="typed"></span></h5>
 							</div>
 						</div>
-						<div class="col-lg-6 col-md-12 banner-image">
-							<img src="./assets/images/banner/banner-image.png" alt="banner-img" class="img-fluid">
-						</div>
-					</div>
+					</section>
+					<!-- ===== End Banner Area ===== -->
 				</div>
-			</section> -->
+			</div>
 		</main>
-		</div>
+		<!-- ===== End Main Area ===== -->
+	</div>
 	
 
 	<!-- JQuery JS -->
@@ -91,5 +87,11 @@
 
 	<!-- Bootstrap JS -->
 	<script src="./js/bootstrap.min.js"></script>
+
+	<!-- Typed JS -->
+	<script src="./js/typed.min.js"></script>
+
+	<!-- Main JS -->
+	<script src="./js/main.js"></script>
 </body>
 </html>
