--- a/index1.html
+++ b/index1.html
@@ -17,6 +17,7 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="bg-img">
@@ -69,8 +70,8 @@
 						<div class="banner-area">
 							<div class="author text-center">
 								<div class="author-img"></div>
-								<h1 class="font-staat text-uppercase py-3">Rupdeep Saha</h1>
-								<h5 class="text-white font-ram font-size-27">I'm <span id="typed"></span></h5>
+								<h1 class="name-effect py-3">Rupdeep Saha</h1>
+								<h5 class="type-effect">I'm <span id="typed"></span></h5>
 							</div>
 						</div>
 					</section>
