--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
+	<!-- Background for banner and navbar -->
 	<div class="bg-img">
 		<!-- ===== Start Header Area ===== -->
 		<header class="header-area">
