added social icons/navbar(1st 3) to be fixed

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 					  <div class="mr-auto"></div>
 					  <ul class="navbar-nav">
 						<li class="nav-item active">
-						  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+						    <a class="nav-link" href="#">Home</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="#">About</a>
+							<a class="nav-link" href="#">About</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="#">Services</a>
+							<a class="nav-link" href="#">Services</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Portfolio</a>
@@ -73,8 +73,43 @@
 								<div class="author-img"></div>
 								<h1 class="name-effect py-3">Rupdeep Saha</h1>
 								<h5 class="type-effect">I'm <span id="typed"></span></h5>
+								<div class="social-icons">
+									<ul>
+										<li class="list">
+											<a href="mailto:kristijan.mkd@gmail.com" target="_blank">
+												<div class="fa fa-envelope icon-white"></div>
+											</a>
+										</li>
+										<li class="list">
+											<a href="https://twitter.com/thekitze" target="_blank">
+												<i class="fab fa-twitter icon-white"></i>
+											</a>
+										</li>
+										<li class="list">
+											<a href="https://github.com/kitze" target="_blank">
+												<div class="fab fa-github icon-white"></div>
+											</a>
+										</li>
+										<li class="list">
+											<a href="https://medium.com/@kitze" target="_blank">
+												<div class="fab fa-medium icon-white"></div>
+											</a>
+										</li>
+										<li class="list">
+											<a href="https://medium.com/@kitze" target="_blank">
+												<div class="fab fa-facebook icon-white"></div>
+											</a>
+										</li>
+										<li class="list">
+											<a href="https://medium.com/@kitze" target="_blank">
+												<div class="fab fa-telegram icon-white"></div>
+											</a>
+										</li>
+									</ul>
+								</div>
 							</div>
 						</div>
+							<!-- Social icons from kitze -->
 					</section>
 					<!-- ===== End Banner Area ===== -->
 				</div>
