fixed navbar and changed social icons effect

--- a/index.html
+++ b/index.html
@@ -44,13 +44,10 @@
 							<a class="nav-link" href="#">Services</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Portfolio</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Pages</a>
-						</li>
-						<li class="nav-item">
 							<a class="nav-link" href="#">Blog</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Projects</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Contact</a>
