fixed banner and responsiveness

--- a/index.html
+++ b/index.html
@@ -60,58 +60,50 @@
 		<!-- ===== End Header Area ===== -->
 
 		<!-- ===== Start Main Area ===== -->
-		<main class="site-main">
-			<div class="row m-0">
-				<div class="col-md-12">
-					<!-- ===== Start Banner Area ===== -->
-					<section class="site-banner" id="home">
-						<div class="banner-area">
-							<div class="author text-center">
-								<div class="author-img"></div>
-								<h1 class="name-effect py-3">Rupdeep Saha</h1>
-								<h5 class="type-effect">I'm <span id="typed"></span></h5>
-								<div class="social-icons">
-									<ul>
-										<li class="list">
-											<a href="mailto:kristijan.mkd@gmail.com" target="_blank">
-												<div class="fa fa-envelope icon-white"></div>
-											</a>
-										</li>
-										<li class="list">
-											<a href="https://twitter.com/thekitze" target="_blank">
-												<i class="fab fa-twitter icon-white"></i>
-											</a>
-										</li>
-										<li class="list">
-											<a href="https://github.com/kitze" target="_blank">
-												<div class="fab fa-github icon-white"></div>
-											</a>
-										</li>
-										<li class="list">
-											<a href="https://medium.com/@kitze" target="_blank">
-												<div class="fab fa-medium icon-white"></div>
-											</a>
-										</li>
-										<li class="list">
-											<a href="https://medium.com/@kitze" target="_blank">
-												<div class="fab fa-facebook icon-white"></div>
-											</a>
-										</li>
-										<li class="list">
-											<a href="https://medium.com/@kitze" target="_blank">
-												<div class="fab fa-telegram icon-white"></div>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-							<!-- Social icons from kitze -->
-					</section>
-					<!-- ===== End Banner Area ===== -->
+		<div class="site-main">
+			
+			<div class="author">
+				<div class="author-img"></div>
+				<h1 class="name-effect">Rupdeep Saha</h1>
+				<h5 class="type-effect">I'm <span id="typed"></span></h5>
+				<div class="social-icons">
+					<ul>
+						<li class="list">
+							<a href="mailto:kristijan.mkd@gmail.com" target="_blank">
+								<div class="fa fa-envelope icon-white"></div>
+							</a>
+						</li>
+						<li class="list">
+							<a href="https://twitter.com/thekitze" target="_blank">
+								<i class="fab fa-twitter icon-white"></i>
+							</a>
+						</li>
+						<li class="list">
+							<a href="https://github.com/kitze" target="_blank">
+								<div class="fab fa-github icon-white"></div>
+							</a>
+						</li>
+						<li class="list">
+							<a href="https://medium.com/@kitze" target="_blank">
+								<div class="fab fa-medium icon-white"></div>
+							</a>
+						</li>
+						<li class="list">
+							<a href="https://medium.com/@kitze" target="_blank">
+								<div class="fab fa-facebook icon-white"></div>
+							</a>
+						</li>
+						<li class="list">
+							<a href="https://medium.com/@kitze" target="_blank">
+								<div class="fab fa-telegram icon-white"></div>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
-		</main>
+							<!-- Social icons from kitze -->
+					<!-- ===== End Banner Area ===== -->
+		</div>
 		<!-- ===== End Main Area ===== -->
 	</div>
 	
