changed the toggler-icon

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<nav class="navbar navbar-expand-lg navbar-light">
 					<a class="navbar-brand" href="#">Rupdeep Saha</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					  <span class="navbar-toggler-icon"></span>
+					  <i class="fas fa-bars" style="color: rgba(255, 255, 255, 0.8) ; font-size: 27px;"></i>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 					  <div class="mr-auto"></div>
@@ -69,17 +69,17 @@
 				<div class="social-icons">
 					<ul>
 						<li class="list">
-							<a href="mailto:kristijan.mkd@gmail.com" target="_blank">
+							<a href="mailto:rupdeep654@gmail.com" target="_blank">
 								<div class="fa fa-envelope icon-white"></div>
 							</a>
 						</li>
 						<li class="list">
-							<a href="https://twitter.com/thekitze" target="_blank">
+							<a href="https://twitter.com/therupdeep" target="_blank">
 								<i class="fab fa-twitter icon-white"></i>
 							</a>
 						</li>
 						<li class="list">
-							<a href="https://github.com/kitze" target="_blank">
+							<a href="https://github.com/therupdeep" target="_blank">
 								<div class="fab fa-github icon-white"></div>
 							</a>
 						</li>
@@ -91,6 +91,11 @@
 						<li class="list">
 							<a href="https://medium.com/@kitze" target="_blank">
 								<div class="fab fa-facebook icon-white"></div>
+							</a>
+						</li>
+						<li class="list">
+							<a href="https://medium.com/@kitze" target="_blank">
+								<div class="fab fa-linkedin icon-white"></div>
 							</a>
 						</li>
 						<li class="list">
