--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
 		<header class="header-area">
 			<div class="main-menu">
 				<!-- === Bootstrap Navbar === -->
-				<nav class="navbar navbar-expand-lg navbar-light">
+				<nav class="navbar navbar-expand-lg navbar-light class1">
 					<a class="navbar-brand" href="#">Rupdeep Saha</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					  <i class="fas fa-bars" style="color: rgba(255, 255, 255, 0.8) ; font-size: 27px;"></i>
+						<span class="navbar-toggler-icon" onclick="togglerFunction()">
+							<i class="fas fa-bars" style="color: rgba(255, 255, 255, 0.8) ; font-size: 27px;"></i>
+						</span>
+						
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 					  <div class="mr-auto"></div>
