made perfect toggler

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 		<header class="header-area">
 			<div class="main-menu">
 				<!-- === Bootstrap Navbar === -->
-				<nav class="navbar navbar-expand-lg navbar-light class1">
+				<nav class="navbar navbar-expand-lg navbar-light">
 					<a class="navbar-brand" href="#">Rupdeep Saha</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon" onclick="togglerFunction()">
-							<i class="fas fa-bars" style="color: rgba(255, 255, 255, 0.8) ; font-size: 27px;"></i>
+						<span class="navbar-toggler-icon">
+							<i class="fas fa-bars" onclick="togglerFunction()" style="color: rgba(255, 255, 255, 0.8) ; font-size: 27px;"></i>
 						</span>
 						
 					</button>
