added incomplete about me

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 		<!-- ===== Start Main Area ===== -->
 		<div class="site-main">
-			
+			<!-- ===== Start Banner Area ===== -->
 			<div class="author">
 				<div class="author-img"></div>
 				<h1 class="name-effect">Rupdeep Saha</h1>
@@ -109,11 +109,30 @@
 					</ul>
 				</div>
 			</div>
-							<!-- Social icons from kitze -->
-					<!-- ===== End Banner Area ===== -->
+			<!-- ===== End Banner Area ===== -->
 		</div>
 		<!-- ===== End Main Area ===== -->
 	</div>
+	<!-- Start About Me Area -->
+	<section class="about">
+		<div class="container">
+		<h1 class="text-uppercase about-me-text">About Me</h3>
+		<div class="row">
+			<div class="col-md-5 col-sm-10">
+				<div>
+					<img src="./assets/images/banner/about.jpg" alt="profile-image" class="profile-image">
+				</div>
+			</div>
+			<div class="col-md-7 col-sm-10">
+				<div>
+					<h2>I am Rupdeep Saha</h2>
+					<span> Developer | Web · iOS · Android</span>
+				</div>
+			</div>
+		</div>
+	</div>
+	</section>
+	<!-- End About Me Area -->
 	
 
 	<!-- JQuery JS -->
