--- a/index1.html
+++ b/index1.html
@@ -1,92 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Rupdeep Saha | Portfolio</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
+    <!-- Fonts and icons -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="./css/font-awesome.min.css" />
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="./css/bootstrap.min.css">
+    <!-- Material Kit CSS -->
+    <link href="./css/material-kit.min.css" rel="stylesheet" />
 
-	<!-- Font Awesome icons -->
-	<link rel="stylesheet" href="./css/all.min.css">
+    <!-- My own stylesheet -->
+    <link rel="stylesheet" href="./css/style1.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="bg-img"></div>
+    <header>
+      <nav
+        class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg"
+        color-on-scroll="100"
+      >
+        <div class="container">
+          <div class="navbar-translate">
+            <a class="navbar-brand" href="#">Rupdeep Saha</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!--   Core JS Files   -->
+    <script src="./js/jquery.min.js" type="text/javascript"></script>
+    <script src="./js/popper.min.js" type="text/javascript"></script>
+    <script
+      src="./js/bootstrap-material-design.min.js"
+      type="text/javascript"
+    ></script>
+    <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+    <script src="./js/material-kit.min.js" type="text/javascript"></script>
 
-	<!-- My own stylesheet -->
-	<link rel="stylesheet" href="./css/style.css">
+    <!-- Typed JS -->
+    <script src="./js/typed.min.js"></script>
 
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-</head>
-<body>
-	<!-- ===== Header Area ===== -->
-	<header class="header-area">
-		<div class="main-menu">
-			<!-- === Bootstrap Navbar === -->
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<a class="navbar-brand" href="#">Rupdeep Saha</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-				  <div class="mr-auto"></div>
-				  <ul class="navbar-nav">
-					<li class="nav-item active">
-					  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">About</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Services</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Portfolio</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Pages</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Blog</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
-					</li>
-				  </ul>
-				</div>
-			</nav>
-		</div>
-	</header>
-
-	<!-- ===== Main Area ===== -->
-	<main class="site-main">
-		<!-- ===== Banner Area ===== -->
-		<section class="site-banner">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-6 col-md-12 site-title">
-						<h3 class="title-text">Hey</h3>
-						<h1 class="title-text text-uppercase">I am Rupdeep</h1>
-						<h4 class="title-text text-uppercase">Senior Wordpress Developer</h4>
-						<div class="site-buttons">
-							<div class="d-flex flex-row flex-wrap">
-								<button type="button" class="btn button primary-button mr-4 text-uppercase">Hire Me</button>
-								<button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 col-md-12 banner-image">
-						<img src="./assets/images/banner/banner-image.png" alt="banner-img" class="img-fluid">
-					</div>
-				</div>
-			</div>
-		</section>
-	</main>
-
-	<!-- JQuery JS -->
-	<script src="./js/jquery-3.5.1.min.js"></script>
-
-	<!-- Bootstrap JS -->
-	<script src="./js/bootstrap.min.js"></script>
-</body>
+    <!-- Main JS -->
+    <script src="./js/main.js"></script>
+  </body>
 </html>
