--- a/index1.html
+++ b/index1.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Rupdeep Saha | Portfolio</title>
 
-    <!-- Fonts and icons -->
+    <!-- Google Fonts -->
     <link
       rel="stylesheet"
       type="text/css"
@@ -15,6 +16,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans"
       rel="stylesheet"
     />
+
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="./css/font-awesome.min.css" />
 
@@ -23,56 +25,131 @@
 
     <!-- My own stylesheet -->
     <link rel="stylesheet" href="./css/style1.css" />
-    <title>Document</title>
   </head>
   <body>
-    <div class="bg-img"></div>
-    <header>
-      <nav
-        class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg"
-        color-on-scroll="100"
-      >
-        <div class="container">
-          <div class="navbar-translate">
-            <a class="navbar-brand" href="#">Rupdeep Saha</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="sr-only">Toggle navigation</span>
-              <span class="navbar-toggler-icon"></span>
-              <span class="navbar-toggler-icon"></span>
-              <span class="navbar-toggler-icon"></span>
-            </button>
+    <!-- Start Banner Image -->
+    <div class="bg-img">
+      <!-- Start Header -->
+      <header>
+        <nav
+          class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg"
+          color-on-scroll="100"
+        >
+          <div class="container">
+            <div class="navbar-translate">
+              <a class="navbar-brand" href="#">Rupdeep Saha</a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="sr-only">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div class="collapse navbar-collapse">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Projects</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Blog</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Resume</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+        </nav>
+      </header>
+      <!-- End Header -->
+      <!-- Start Banner -->
+      <div class="site-main">
+        <div class="author">
+          <div class="author-img"></div>
+          <h1 class="name">Rupdeep Saha</h1>
+          <h5 class="type-effect">I'm <span id="typed"></span></h5>
+          <div class="social-icons">
+            <ul>
+              <li class="list">
+                <a href="mailto:rupdeep654@gmail.com" target="_blank">
+                  <div class="fa fa-envelope icon-white"></div>
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+              <li class="list">
+                <a href="https://twitter.com/therupdeep" target="_blank">
+                  <i class="fab fa-twitter icon-white"></i>
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+              <li class="list">
+                <a href="https://github.com/therupdeep" target="_blank">
+                  <div class="fab fa-github icon-white"></div>
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+              <li class="list">
+                <a href="https://medium.com/@kitze" target="_blank">
+                  <div class="fab fa-medium icon-white"></div>
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
+              <li class="list">
+                <a href="https://medium.com/@kitze" target="_blank">
+                  <div class="fab fa-facebook icon-white"></div>
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+              <li class="list">
+                <a href="https://medium.com/@kitze" target="_blank">
+                  <div class="fab fa-linkedin icon-white"></div>
+                </a>
+              </li>
+              <li class="list">
+                <a href="https://medium.com/@kitze" target="_blank">
+                  <div class="fab fa-telegram icon-white"></div>
+                </a>
               </li>
             </ul>
           </div>
         </div>
-      </nav>
-    </header>
+      </div>
+
+      
+    </div>
+    <!-- End Banner Image-->
+
+    <div class="container">
+      <h1 style="font-size: 3rem;">About Me</h1>
+    </div>
+    <div class="container">
+      <h1 style="font-size: 3rem;">About Me</h1>
+    </div>
+    <div class="container">
+      <h1 style="font-size: 3rem;">About Me</h1>
+    </div>
+    <div class="container">
+      <h1 style="font-size: 3rem;">About Me</h1>
+    </div>
+    <div class="container">
+      <h1 style="font-size: 3rem;">About Me</h1>
+    </div>
+    <div class="container">
+      <h1 style="font-size: 3rem;">About Me</h1>
+    </div>
+    <div class="container">
+      <h1 style="font-size: 3rem;">About Me</h1>
+    </div>
     <!--   Core JS Files   -->
     <script src="./js/jquery.min.js" type="text/javascript"></script>
     <script src="./js/popper.min.js" type="text/javascript"></script>
