experience and skills area in progress

--- a/index1.html
+++ b/index1.html
@@ -81,7 +81,7 @@
       <div class="site-main">
         <div class="author">
           <div class="author-img"></div>
-          <h1 class="name">Rupdeep Saha</h1>
+          <h2 class="name">Rupdeep Saha</h2>
           <h5 class="type-effect">I'm <span id="typed"></span></h5>
           <div class="social-icons">
             <ul>
@@ -124,32 +124,50 @@
           </div>
         </div>
       </div>
-
-      
     </div>
     <!-- End Banner Image-->
 
-    <div class="container">
-      <h1 style="font-size: 3rem;">About Me</h1>
+    <!-- Start About Me Area -->
+    <div class="container" style="margin-top: 3rem;">
+      <h1 class="about-me-text">About Me</h1>
+      <div class="row">
+        <div class="col-lg-5 col-md-5 col-sm-10">
+            <img src="./assets/images/banner/about1.jpg" alt="profile-image" style="max-width: 90%;">
+        </div>
+        <div class="col-lg-7 col-md-7 col-sm-10">
+            <h2>I am Rupdeep Saha</h2>
+            <span> Developer | Web · iOS · Android</span>
+            <p style="margin-top: 2rem;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos minima, iste eaque veritatis doloribus neque inventore ut numquam molestiae nesciunt qui deleniti aperiam eveniet minus exercitationem, eligendi sapiente natus assumenda?</p>
+        </div>
+      </div>
     </div>
-    <div class="container">
-      <h1 style="font-size: 3rem;">About Me</h1>
+    <!-- End About Me Area -->
+
+    <!-- Start Experience and Skills Area -->
+
+    <div class="container" style="margin-top: 3rem;">
+      <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <h2 class="text-uppercase">Experience</h2>
+          <ul class="experience-list">
+            <li class="experience-list-item">
+              <span>Front End Web Developer</span>
+              <span style="float: right;">2018-2019</span>
+              <p>jddddddddddddddddddddddddddddddd</p>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <h2 class="text-uppercase">Skills</h2>
+          <ul style="padding: 0">
+            <li style="list-style: none">jdjdjdjdjdj</li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="container">
-      <h1 style="font-size: 3rem;">About Me</h1>
-    </div>
-    <div class="container">
-      <h1 style="font-size: 3rem;">About Me</h1>
-    </div>
-    <div class="container">
-      <h1 style="font-size: 3rem;">About Me</h1>
-    </div>
-    <div class="container">
-      <h1 style="font-size: 3rem;">About Me</h1>
-    </div>
-    <div class="container">
-      <h1 style="font-size: 3rem;">About Me</h1>
-    </div>
+
+    <!-- End Experience and Skills Area -->
+
     <!--   Core JS Files   -->
     <script src="./js/jquery.min.js" type="text/javascript"></script>
     <script src="./js/popper.min.js" type="text/javascript"></script>
