projects area in progress

--- a/index1.html
+++ b/index1.html
@@ -128,7 +128,7 @@
     <!-- End Banner Image-->
 
     <!-- Start About Me Area -->
-    <div class="container" style="margin-top: 3rem;">
+    <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
       <h1 class="about-me-text">About Me</h1>
       <div class="row">
         <div class="col-lg-5 col-md-5 col-sm-10">
@@ -145,8 +145,21 @@
 
     <!-- Start Experience and Skills Area -->
 
-    <div class="container" style="margin-top: 3rem;">
+    <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
       <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
+          <h2 class="text-uppercase">Skills</h2>
+          <ul class="skill-list">
+            <li class="skill-list-item">
+              <span>React</span>
+              <span style="float: right;">25%</span>
+              <div class="progress" style="margin-top: 1rem;">
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
         <div class="col-lg-6 col-md-12 col-sm-12">
           <h2 class="text-uppercase">Experience</h2>
           <ul class="experience-list">
@@ -157,17 +170,14 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-6 col-md-12 col-sm-12">
-          <h2 class="text-uppercase">Skills</h2>
-          <ul style="padding: 0">
-            <li style="list-style: none">jdjdjdjdjdj</li>
-          </ul>
-        </div>
       </div>
     </div>
 
     <!-- End Experience and Skills Area -->
 
+    <!-- Start Projects Area -->
+
+    <!-- End Projects Area -->
     <!--   Core JS Files   -->
     <script src="./js/jquery.min.js" type="text/javascript"></script>
     <script src="./js/popper.min.js" type="text/javascript"></script>
