--- a/index1.html
+++ b/index1.html
@@ -1,197 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Rupdeep Saha | Portfolio</title>
 
-    <!-- Google Fonts -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Rupdeep Saha | Portfolio</title>
 
-    <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="./css/font-awesome.min.css" />
+  <!-- Google Fonts -->
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
 
-    <!-- Material Kit CSS -->
-    <link href="./css/material-kit.min.css" rel="stylesheet" />
+  <!-- Font Awesome icons -->
+  <link rel="stylesheet" href="./css/font-awesome.min.css" />
 
-    <!-- My own stylesheet -->
-    <link rel="stylesheet" href="./css/style1.css" />
-  </head>
-  <body>
-    <!-- Start Banner Image -->
-    <div class="bg-img">
-      <!-- Start Header -->
-      <header>
-        <nav
-          class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg"
-          color-on-scroll="100"
-        >
-          <div class="container">
-            <div class="navbar-translate">
-              <a class="navbar-brand" href="#">Rupdeep Saha</a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="sr-only">Toggle navigation</span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-            <div class="collapse navbar-collapse">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Projects</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Resume</a>
-                </li>
-              </ul>
-            </div>
+  <!-- Material Kit CSS -->
+  <link href="./css/material-kit.min.css" rel="stylesheet" />
+
+  <!-- My own stylesheet -->
+  <link rel="stylesheet" href="./css/style1.css" />
+</head>
+
+<body>
+  <!-- Start Banner Image -->
+  <div class="bg-img">
+    <!-- Start Header -->
+    <header>
+      <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="100">
+        <div class="container">
+          <div class="navbar-translate">
+            <a class="navbar-brand" href="#">Rupdeep Saha</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
+            </button>
           </div>
-        </nav>
-      </header>
-      <!-- End Header -->
-      <!-- Start Banner -->
-      <div class="site-main">
-        <div class="author">
-          <div class="author-img"></div>
-          <h2 class="name">Rupdeep Saha</h2>
-          <h5 class="type-effect">I'm <span id="typed"></span></h5>
-          <div class="social-icons">
-            <ul>
-              <li class="list">
-                <a href="mailto:rupdeep654@gmail.com" target="_blank">
-                  <div class="fa fa-envelope icon-white"></div>
-                </a>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
               </li>
-              <li class="list">
-                <a href="https://twitter.com/therupdeep" target="_blank">
-                  <i class="fab fa-twitter icon-white"></i>
-                </a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
               </li>
-              <li class="list">
-                <a href="https://github.com/therupdeep" target="_blank">
-                  <div class="fab fa-github icon-white"></div>
-                </a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
               </li>
-              <li class="list">
-                <a href="https://medium.com/@kitze" target="_blank">
-                  <div class="fab fa-medium icon-white"></div>
-                </a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
               </li>
-              <li class="list">
-                <a href="https://medium.com/@kitze" target="_blank">
-                  <div class="fab fa-facebook icon-white"></div>
-                </a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
               </li>
-              <li class="list">
-                <a href="https://medium.com/@kitze" target="_blank">
-                  <div class="fab fa-linkedin icon-white"></div>
-                </a>
-              </li>
-              <li class="list">
-                <a href="https://medium.com/@kitze" target="_blank">
-                  <div class="fab fa-telegram icon-white"></div>
-                </a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Resume</a>
               </li>
             </ul>
           </div>
         </div>
+      </nav>
+    </header>
+    <!-- End Header -->
+    <!-- Start Banner -->
+    <div class="site-main">
+      <div class="author">
+        <div class="author-img"></div>
+        <h2 class="name">Rupdeep Saha</h2>
+        <h5 class="type-effect">I'm <span id="typed"></span></h5>
+        <div class="social-icons">
+          <ul>
+            <li class="list">
+              <a href="mailto:rupdeep654@gmail.com" target="_blank">
+                <div class="fa fa-envelope icon-white"></div>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://twitter.com/therupdeep" target="_blank">
+                <i class="fab fa-twitter icon-white"></i>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://github.com/therupdeep" target="_blank">
+                <div class="fab fa-github icon-white"></div>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://medium.com/@kitze" target="_blank">
+                <div class="fab fa-medium icon-white"></div>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://medium.com/@kitze" target="_blank">
+                <div class="fab fa-facebook icon-white"></div>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://medium.com/@kitze" target="_blank">
+                <div class="fab fa-linkedin icon-white"></div>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://medium.com/@kitze" target="_blank">
+                <div class="fab fa-telegram icon-white"></div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-    <!-- End Banner Image-->
+  </div>
+  <!-- End Banner Image-->
 
-    <!-- Start About Me Area -->
-    <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
-      <h1 class="about-me-text">About Me</h1>
-      <div class="row">
-        <div class="col-lg-5 col-md-5 col-sm-10">
-            <img src="./assets/images/banner/about1.jpg" alt="profile-image" style="max-width: 90%;">
-        </div>
-        <div class="col-lg-7 col-md-7 col-sm-10">
-            <h2>I am Rupdeep Saha</h2>
-            <span> Developer | Web · iOS · Android</span>
-            <p style="margin-top: 2rem;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos minima, iste eaque veritatis doloribus neque inventore ut numquam molestiae nesciunt qui deleniti aperiam eveniet minus exercitationem, eligendi sapiente natus assumenda?</p>
+  <!-- Start About Me Area -->
+  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
+    <h1 class="about-me-text">About Me</h1>
+    <div class="row">
+      <div class="col-lg-5 col-md-5 col-sm-10">
+        <img src="./assets/images/banner/about1.jpg" alt="profile-image" style="max-width: 90%;">
+      </div>
+      <div class="col-lg-7 col-md-7 col-sm-10">
+        <h2>I am Rupdeep Saha</h2>
+        <span> Developer | Web · iOS · Android</span>
+        <p style="margin-top: 2rem;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos minima, iste
+          eaque veritatis doloribus neque inventore ut numquam molestiae nesciunt qui deleniti aperiam eveniet minus
+          exercitationem, eligendi sapiente natus assumenda?</p>
+      </div>
+    </div>
+  </div>
+  <!-- End About Me Area -->
+
+  <!-- Start Experience and Skills Area -->
+
+  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
+        <h2 class="text-uppercase">Skills</h2>
+        <ul class="skill-list">
+          <li class="skill-list-item">
+            <span>React</span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <h2 class="text-uppercase">Experience</h2>
+        <ul class="experience-list">
+          <li class="experience-list-item">
+            <span>Front End Web Developer</span>
+            <span style="float: right;">2018-2019</span>
+            <p>jddddddddddddddddddddddddddddddd</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- End Experience and Skills Area -->
+
+  <!-- Start Projects Area -->
+  <!-- If we want a carousel we can do it with https://frontendscript.com/responsive-css-only-carousel-slider/ -->
+
+  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
+    <h1 class="about-me-text">Projects</h1>
+    <div class="card-container">
+      <div class="card" style="width: 20rem;height: 20rem;">
+        <img class="img-fluid" src="./assets/images/banner/about.jpg" style="width: 100%; height: 45%;">
+        <div class="card-content" style="width: 100%; height: 55%;padding: 2rem;">
+          <span><b>Artemis</b></span>
+          <p style="margin-bottom: 1.5rem;">hdhhdhdhhdkdkdkdkdkdkdkdkdkdkdddddddddddddddd</p>
+          <a href="">Open&nbsp;&nbsp;<span><i class="fas fa-external-link-alt"></i></span>
+          </a>
         </div>
       </div>
     </div>
-    <!-- End About Me Area -->
+    <h5><a href="">...view all projects</a></h5>
+  </div>
+  </div>
+  <!-- End Projects Area -->
 
-    <!-- Start Experience and Skills Area -->
+  <!-- Start Footer Area -->
+  <footer>
+    <h1>Want to get in touch?</h1>
+    <span><button data-toggle="modal" data-target="#contactModal">kfkkffkfkkf</button></span>
+    <div class="modal fade" id="contactModal" tabindex="-1" role="">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
 
-    <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
-      <div class="row">
-        <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
-          <h2 class="text-uppercase">Skills</h2>
-          <ul class="skill-list">
-            <li class="skill-list-item">
-              <span>React</span>
-              <span style="float: right;">25%</span>
-              <div class="progress" style="margin-top: 1rem;">
-                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form class="form" method="" action="">
+              <p class="description text-center">Or Be Classical</p>
+              <div class="card-body">
+
+                <div class="form-group bmd-form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="material-icons">face</i>
+                    </span>
+                    <input type="text" class="form-control" placeholder="First Name...">
+                  </div>
+                </div>
+
+                <div class="form-group bmd-form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="material-icons">email</i>
+                    </span>
+                    <input type="text" class="form-control" placeholder="Email...">
+                  </div>
+                </div>
+                <div class="form-group bmd-form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="material-icons">lock_outline</i>
+                    </span>
+                    <input type="password" placeholder="Password..." class="form-control">
+                  </div>
                 </div>
               </div>
-            </li>
-          </ul>
-        </div>
-        <div class="col-lg-6 col-md-12 col-sm-12">
-          <h2 class="text-uppercase">Experience</h2>
-          <ul class="experience-list">
-            <li class="experience-list-item">
-              <span>Front End Web Developer</span>
-              <span style="float: right;">2018-2019</span>
-              <p>jddddddddddddddddddddddddddddddd</p>
-            </li>
-          </ul>
+            </form>
+            <div class="modal-footer justify-content-center">
+              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">Get Started</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+  </footer>
+  <!-- End Footer Area -->
+  <!--   Core JS Files   -->
+  <script src="./js/jquery.min.js" type="text/javascript"></script>
+  <script src="./js/popper.min.js" type="text/javascript"></script>
+  <script src="./js/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <script src="./js/material-kit.min.js" type="text/javascript"></script>
 
-    <!-- End Experience and Skills Area -->
+  <!-- Typed JS -->
+  <script src="./js/typed.min.js"></script>
 
-    <!-- Start Projects Area -->
+  <!-- Main JS -->
+  <script src="./js/main.js"></script>
+</body>
 
-    <!-- End Projects Area -->
-    <!--   Core JS Files   -->
-    <script src="./js/jquery.min.js" type="text/javascript"></script>
-    <script src="./js/popper.min.js" type="text/javascript"></script>
-    <script
-      src="./js/bootstrap-material-design.min.js"
-      type="text/javascript"
-    ></script>
-    <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-    <script src="./js/material-kit.min.js" type="text/javascript"></script>
-
-    <!-- Typed JS -->
-    <script src="./js/typed.min.js"></script>
-
-    <!-- Main JS -->
-    <script src="./js/main.js"></script>
-  </body>
 </html>
