--- a/index1.html
+++ b/index1.html
@@ -201,40 +201,26 @@
             </button>
           </div>
           <div class="modal-body">
-            <form class="form" method="" action="">
-              <p class="description text-center">Or Be Classical</p>
-              <div class="card-body">
-
-                <div class="form-group bmd-form-group">
-                  <div class="input-group">
-                    <span class="input-group-addon">
-                      <i class="material-icons">face</i>
-                    </span>
-                    <input type="text" class="form-control" placeholder="First Name...">
-                  </div>
-                </div>
-
-                <div class="form-group bmd-form-group">
-                  <div class="input-group">
-                    <span class="input-group-addon">
-                      <i class="material-icons">email</i>
-                    </span>
-                    <input type="text" class="form-control" placeholder="Email...">
-                  </div>
-                </div>
-                <div class="form-group bmd-form-group">
-                  <div class="input-group">
-                    <span class="input-group-addon">
-                      <i class="material-icons">lock_outline</i>
-                    </span>
-                    <input type="password" placeholder="Password..." class="form-control">
-                  </div>
-                </div>
-              </div>
-            </form>
-            <div class="modal-footer justify-content-center">
-              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">Get Started</a>
+            <form action="action_page.php">
+              <div class="form-group">
+              <label for="fullname">Name</label>
+              <input type="text" class="form-control" id="fullname" name="fullname" placeholder="John Doe" required>
             </div>
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" class="form-control" id="email" name="email" placeholder="abc@xyz.com" required>
+            </div>
+            <div class="form-group">
+              <label for="subject">Subject</label>
+              <input type="subject" class="form-control" id="subject" name="subject" placeholder="Enter Subject" required>
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" class="form-control" name="message" placeholder="Leave a message for me, I will get back to you at the earliest" rows="3" required></textarea>
+            </div>
+              <input type="submit" value="Submit">
+          
+            </form>
           </div>
         </div>
       </div>
