--- a/index1.html
+++ b/index1.html
@@ -120,7 +120,7 @@
     <h1 class="about-me-text">About Me</h1>
     <div class="row">
       <div class="col-lg-5 col-md-5 col-sm-10">
-        <img src="./assets/images/banner/about1.jpg" alt="profile-image" style="max-width: 90%;">
+        <img src="./assets/images/coder.gif" alt="profile-image" style="max-width: 100%;border-radius: 10%;">
       </div>
       <div class="col-lg-7 col-md-7 col-sm-10">
         <h2>I am Rupdeep Saha</h2>
@@ -196,9 +196,12 @@
         <div class="modal-content">
 
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+            <span><h3 style="margin-top: 0;">Contact Me</h3></span>
+            <span>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </span>
           </div>
           <div class="modal-body">
             <form action="action_page.php">
@@ -216,9 +219,9 @@
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea id="message" class="form-control" name="message" placeholder="Leave a message for me, I will get back to you at the earliest" rows="3" required></textarea>
+              <textarea id="message" class="form-control" name="message" placeholder="Leave a message for me, I will get back to you at the earliest!" rows="5" required></textarea>
             </div>
-              <input type="submit" value="Submit">
+              <input type="submit" value="Send" class="btn btn-primary btn-round">
           
             </form>
           </div>
