dark mode in progress

--- a/index1.html
+++ b/index1.html
@@ -42,6 +42,9 @@
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
+                <i class="nav-link fas fa-sun"></i>
+              </li>
+              <li class="nav-item active">
                 <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
@@ -189,8 +192,8 @@
 
   <!-- Start Footer Area -->
   <footer>
-    <h1>Want to get in touch?</h1>
-    <span><button data-toggle="modal" data-target="#contactModal">kfkkffkfkkf</button></span>
+    <div class="container" style="margin-top: 3rem;margin-bottom: 3rem; text-align: left;">
+    <h2>Want to get in touch? <span data-toggle="modal" data-target="#contactModal" style="cursor: pointer;color: red">Let's talk</span></h2>
     <div class="modal fade" id="contactModal" tabindex="-1" role="">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -228,6 +231,7 @@
         </div>
       </div>
     </div>
+  </div>
   </footer>
   <!-- End Footer Area -->
   <!--   Core JS Files   -->
