--- a/index1.html
+++ b/index1.html
@@ -24,7 +24,8 @@
 
 <body>
   <!-- Start Banner Image -->
-  <div class="bg-img">
+  <!-- https://colorhunt.co/palette/62193 -->
+  <div class="bg-color-1">
     <!-- Start Header -->
     <header>
       <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="100">
@@ -119,8 +120,9 @@
   <!-- End Banner Image-->
 
   <!-- Start About Me Area -->
-  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
-    <h1 class="about-me-text">About Me</h1>
+  <div style="background-color: #323232;padding-bottom: 3rem;padding-top: 3rem;">
+  <div class="container">
+    <h1 class="about-me-text" style="margin-top: 0;">About Me</h1>
     <div class="row">
       <div class="col-lg-5 col-md-5 col-sm-10">
         <lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
@@ -134,6 +136,7 @@
       </div>
     </div>
   </div>
+</div>
   <!-- End About Me Area -->
 
   <!-- Start Experience and Skills Area -->
@@ -149,6 +152,7 @@
             <div class="progress" style="margin-top: 1rem;">
               <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
                 aria-valuemax="100">
+                <span></span>
               </div>
             </div>
           </li>
@@ -280,9 +284,12 @@
   <!-- Typed JS -->
   <script src="./js/typed.min.js"></script>
 
+  <!-- Lottiefiles Script -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
   <!-- Main JS -->
   <script src="./js/main.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  
 </body>
 
 </html>
