modal dark mode

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               <label for="message">Message</label>
               <textarea id="message" class="form-control" name="message" placeholder="Leave a message for me, I will get back to you at the earliest!" rows="5" required></textarea>
             </div>
-              <input type="submit" value="Send" class="btn btn-primary btn-round">
+              <input type="submit" value="Send" class="btn btn-round">
           
             </form>
           </div>
