added banner image

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
    252525 section2
   222831 footer and nav-->
   <!-- #03DAC6 #121212 #333 -->
-  <!-- #1b262c #222831-->
-  <div class="bg-color-1">
+  <!-- #1b262c #222831 #2c2828 #283149 #27323a #232931 #313131 #222222 #212121 #26282b #343434-->
+  <div class="banner-bg">
     <!-- Start Header -->
     <header>
       <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="40">
