--- a/index.html
+++ b/index.html
@@ -153,7 +153,19 @@
   <div style="padding-top: 3rem">
     <div class="container">
       <div class="row">
+        <!-- Experience Area -->
         <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
+          <h2 class="text-uppercase">Experience</h2>
+          <ul class="experience-list">
+            <li class="experience-list-item">
+              <span>Front End Web Developer</span>
+              <span style="float: right;">2018-2019</span>
+              <p>jddddddddddddddddddddddddddddddd</p>
+            </li>
+          </ul>
+        </div>
+        <!-- Skills Area -->
+        <div class="col-lg-6 col-md-12 col-sm-12">
           <h2 class="text-uppercase">Skills</h2>
           <ul class="skill-list">
             <li class="skill-list-item">
@@ -204,16 +216,6 @@
                   aria-valuemax="100">
                 </div>
               </div>
-            </li>
-          </ul>
-        </div>
-        <div class="col-lg-6 col-md-12 col-sm-12">
-          <h2 class="text-uppercase">Experience</h2>
-          <ul class="experience-list">
-            <li class="experience-list-item">
-              <span>Front End Web Developer</span>
-              <span style="float: right;">2018-2019</span>
-              <p>jddddddddddddddddddddddddddddddd</p>
             </li>
           </ul>
         </div>
